chore: add changes to get token and get device info by id
